5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1590_825.log
== SUBMITION (2019-04-08 13:45:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=float(input())
from mathm import*
a=x**2*p1
v=pi*(x**3)*4/3
print(round(a,3))
print(round(v,3))
-- EXECUTION TIME:
0.199115
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/825/main.py", line 5, in <module>
    from mathm import*
ImportError: No module named 'mathm'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:45:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=float(input())
from mathm import*
a=x**2*p1
v=pi*(x**3)*4/3
print(round(a,3))
print(round(v,3))
-- EXECUTION TIME:
0.158158
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/825/main.py", line 5, in <module>
    from mathm import*
ImportError: No module named 'mathm'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:45:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=float(input())
from mathm import*
a=x**2*p1
v=pi*(x**3)*4/3
print(round(a,3))
print(round(v,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from mathm import*
ModuleNotFoundError: No module named 'mathm'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:45:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=float(input())
from math import*
a=x**2*p1
v=pi*(x**3)*4/3
print(round(a,3))
print(round(v,3))
-- EXECUTION TIME:
0.142637
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/825/main.py", line 6, in <module>
    a=x**2*p1
NameError: name 'p1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:45:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=float(input())
from math import*
a=x**2*p1
v=pi*(x**3)*4/3
print(round(a,3))
print(round(v,3))
-- EXECUTION TIME:
0.198754
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/825/main.py", line 6, in <module>
    a=x**2*p1
NameError: name 'p1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:45:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=float(input())
from math import*
a=x**2*p1
v=pi*(x**3)*4/3
print(round(a,3))
print(round(v,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a=x**2*p1
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:45:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=float(input())
from math import*
a=x**2*p1
v=pi*(x**3)*4/3
print(round(a,3))
print(round(v,3))
-- EXECUTION TIME:
0.120429
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/825/main.py", line 6, in <module>
    a=x**2*p1
NameError: name 'p1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:45:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=float(input())
from math import*
a=x**2*pi
v=pi*(x**3)*4/3
print(round(a,3))
print(round(v,3))
-- EXECUTION TIME:
0.153574
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
